Fix #2610 clipped long descriptions of catalog cards

--- a/web/client/components/catalog/RecordItem.css
+++ b/web/client/components/catalog/RecordItem.css
@@ -27,6 +27,11 @@
     overflow: hidden;
 }
 
+.record-item-description {
+    width: 350px;
+    white-space: nowrap;
+}
+
 .record-item .preview{
     float: left;
     width: 150px;
